src/main/java/com/example/citron/web/errors/field/FieldAreaSuperieurCinquanteException.java
package com.example.citron.web.errors.field;

public class FieldAreaSuperieurCinquanteException extends RuntimeException {
    public FieldAreaSuperieurCinquanteException(String message) {
        super(message);
    }
}
